# sclp

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  SESSION_SNAPSHOT.md  benchmark_results.md  design.md  experimental_results.md  kernel_optimization_plan.md  test_ggml_poc  test_sclp.gguf
plans/: f16_intermediate.md  sclp4_vs_q4k_improvement.md  sclp_algorithm_review.md  sclp_gguf_spec.md  sclp_quantize_implementation.md
src/compression/: clipping.py  decoder.py  encoder.py  imatrix.py  pipeline.py  storage.py
src/hip/: CMakeLists.txt  clipping.hip  decoder.hip  encoder.hip  fused_gemm.hip  launcher.hip  sclp_bridge.cuh  wrapper.cpp
src/utils/: metrics.py
tests/: _setup_paths.py  analyze_distributions.py  analyze_sidecar_cost.py  autotuner_framework.py  benchmark_all.py  benchmark_compare.py  benchmark_compression.py  benchmark_hip_extension.py  benchmark_hip_throughput.py  benchmark_performance.py  compare_palette_methods.py  convert_selective_sidecar.py  convert_to_sclp_gguf.py  hip_integration_test.py  patch_gguf_sclp.py  prep_opus_trace.py  repack_sclp_gguf.py  run_ppl_sidecar_experiment.py  test_attention_compression.py  test_compressor_integrity.py  test_distribution_stress.py  test_distributions.py  test_e2e_4bit.py  test_fused_gemm.py  test_ggml_dispatch_poc.cpp  test_hip_kernel.py  test_hip_module.py  test_hip_module_truncation.py  test_import.py  test_integration.py  test_kernel_ready.py  test_llama3_ppl.py  test_mantissa_truncation.py  test_perplexity_simulation.py  test_pipeline.py  test_quality.py  test_real_ppl_impact.py  test_sclp4_decoder_match.py  test_sclp4_roundtrip_real.py  test_sclp_gguf_writing.py  (+4 more)
